# ztools

./: Cargo.toml  README.md  install.sh
ztools-cli/: Cargo.toml
ztools-cli/src/: main.rs
ztools-core/: Cargo.toml
ztools-core/src/: lib.rs  repr.rs  scripts.rs
ztools-core/src/zipper/: mod.rs  unzip.rs  zip.rs
