[package]
name = "ztools-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "3.0.0"
confy = "1.0.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
ztools-core = { path = "../ztools-core" }

[[bin]]
name = "ztools"
path = "src/main.rs"
