[package]
name = "ztools-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "3.0.0"
confy = "1.0.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
ztools-core = { path = "../ztools-core" }
libunftp = "0.21.0"
unftp-sbe-fs = "0.3.0"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "ztools"
path = "src/main.rs"
